Added JWT validation on the API

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "ReviewsAndRatingsAPI2021",
+    "ExpirationInHours": 2,
+    "Issuer": "ReviewsAndRatings",
+    "ValidIn": "https://reviewsandratings.ie"
+  }
 }
