--- a/ReviewsAndRatings.csproj
+++ b/ReviewsAndRatings.csproj
@@ -14,5 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.1"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12"/>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.12"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
   </ItemGroup>
 </Project>
